@@ -2,8 +2,12 @@ package co.javeriana.dw.organizapp.service.impl;
 
 import co.javeriana.dw.organizapp.dto.UserRequestDto;
 import co.javeriana.dw.organizapp.dto.UserResponseDto;
+import co.javeriana.dw.organizapp.entity.Company;
+import co.javeriana.dw.organizapp.entity.Role;
 import co.javeriana.dw.organizapp.entity.User;
 import co.javeriana.dw.organizapp.exception.ResourceNotFoundException;
+import co.javeriana.dw.organizapp.repository.CompanyRepository;
+import co.javeriana.dw.organizapp.repository.RoleRepository;
 import co.javeriana.dw.organizapp.repository.UserRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -12,7 +16,6 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -27,43 +30,69 @@ class UserServiceImplTest {
     private UserRepository userRepository;
 
     @Mock
+    private CompanyRepository companyRepository; // 👈 FALTABA
+
+    @Mock
+    private RoleRepository roleRepository; // 👈 FALTABA
+
+    @Mock
     private ModelMapper modelMapper;
 
     @InjectMocks
     private UserServiceImpl userService;
 
-    @Test
-    void testFindAll() {
+    // 🔧 helper
+    private User buildUser() {
+        Company company = new Company();
+        company.setId(1L);
+
+        Role role = new Role();
+        role.setId(1L);
+        role.setNombre("ADMIN");
+
         User user = new User();
         user.setId(1L);
         user.setName("Test User");
+        user.setCompany(company);
+        user.setRol(role);
 
+        return user;
+    }
+
+    private UserResponseDto buildDto() {
         UserResponseDto dto = new UserResponseDto();
         dto.setId(1L);
         dto.setName("Test User");
+        dto.setCompanyId(1L);
+        dto.setRoleId(1L);
+        dto.setRoleNombre("ADMIN");
+        return dto;
+    }
 
-        when(userRepository.findAll()).thenReturn(Arrays.asList(user));
-        when(modelMapper.map(any(User.class), eq(UserResponseDto.class))).thenReturn(dto);
+    @Test
+    void testFindAll() {
+        User user = buildUser();
+
+        when(userRepository.findAll()).thenReturn(List.of(user));
+        when(modelMapper.map(any(User.class), eq(UserResponseDto.class)))
+                .thenReturn(buildDto());
 
         List<UserResponseDto> result = userService.findAll();
 
         assertNotNull(result);
         assertEquals(1, result.size());
         assertEquals("Test User", result.get(0).getName());
+
+        verify(userRepository).findAll();
     }
 
     @Test
     void testFindByIdSuccess() {
-        User user = new User();
-        user.setId(1L);
-        user.setName("Test User");
-
-        UserResponseDto dto = new UserResponseDto();
-        dto.setId(1L);
-        dto.setName("Test User");
+        User user = buildUser();
 
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        when(modelMapper.map(any(User.class), eq(UserResponseDto.class))).thenReturn(dto);
+        when(modelMapper.map(any(User.class), eq(UserResponseDto.class)))
+                .thenReturn(buildDto());
 
         UserResponseDto result = userService.findById(1L);
 
@@ -75,41 +104,49 @@ class UserServiceImplTest {
     void testFindByIdNotFound() {
         when(userRepository.findById(1L)).thenReturn(Optional.empty());
 
-        assertThrows(ResourceNotFoundException.class, () -> userService.findById(1L));
+        assertThrows(ResourceNotFoundException.class,
+                () -> userService.findById(1L));
     }
 
     @Test
     void testCreate() {
         UserRequestDto requestDto = new UserRequestDto();
         requestDto.setName("Test User");
+        requestDto.setCompanyId(1L); // 👈 CLAVE
+        requestDto.setRoleId(1L);    // 👈 CLAVE
 
-        User user = new User();
-        user.setId(1L);
-        user.setName("Test User");
+        Company company = new Company();
+        company.setId(1L);
 
-        UserResponseDto responseDto = new UserResponseDto();
-        responseDto.setId(1L);
-        responseDto.setName("Test User");
+        Role role = new Role();
+        role.setId(1L);
 
-        when(modelMapper.map(any(UserRequestDto.class), eq(User.class))).thenReturn(user);
+        User user = buildUser();
+
+        when(companyRepository.findById(1L)).thenReturn(Optional.of(company));
+        when(roleRepository.findById(1L)).thenReturn(Optional.of(role));
+        when(modelMapper.map(any(UserRequestDto.class), eq(User.class)))
+                .thenReturn(user);
         when(userRepository.save(any(User.class))).thenReturn(user);
-        when(modelMapper.map(any(User.class), eq(UserResponseDto.class))).thenReturn(responseDto);
+        when(modelMapper.map(any(User.class), eq(UserResponseDto.class)))
+                .thenReturn(buildDto());
 
         UserResponseDto result = userService.create(requestDto);
 
         assertNotNull(result);
         assertEquals("Test User", result.getName());
+
+        verify(userRepository).save(any(User.class));
     }
 
     @Test
     void testDelete() {
-        User user = new User();
-        user.setId(1L);
+        User user = buildUser();
 
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-        doNothing().when(userRepository).delete(any(User.class));
 
-        assertDoesNotThrow(() -> userService.delete(1L));
-        verify(userRepository, times(1)).delete(any(User.class));
+        userService.delete(1L);
+
+        verify(userRepository).delete(user);
     }
 }
